beginning to process images

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
+    "dms2dec": "^1.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "exif": "^0.6.0",
     "flat-map": "^1.0.0",
     "gulp": "^4.0.0",
     "gulp-imagemin": "^5.0.3",
