--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "date-fns": "^1.30.1",
+    "moment": "^2.24.0",
     "vue": "^2.5.22"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "exif": "^0.6.0",
     "flat-map": "^1.0.0",
     "gulp": "^4.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-scale-images": "^1.1.3",
     "vue-template-compiler": "^2.5.21"
