--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "gulp-clean": "^0.4.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-scale-images": "^1.1.3",
-    "vue-template-compiler": "^2.5.21"
+    "showdown": "^1.9.0",
+    "vue-template-compiler": "^2.5.21",
+    "yaml-front-matter": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
