--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "date-fns": "^1.30.1",
     "leaflet": "^1.4.0",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
