--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "node-fetch": "^2.3.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue2-leaflet": "^2.0.2",
