--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "deploy": "NODE_ENV=production yarn build && cd deploy; git commit -am 'rev'; git push origin gh-pages",
+    "deploy": "NODE_ENV=production yarn build && cd dist; git commit -am 'rev'; git push origin gh-pages",
     "build": "node build/build.js"
   },
   "dependencies": {
