--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "deploy": "NODE_ENV=production yarn build && git checkout gh-pages && git rm -rf . && mv dist/* ./ ; git checkout master -- .gitignore && git add . && git commit -am 'rev' && git push origin gh-pages  && git checkout master",
+    "deploy": "NODE_ENV=production yarn build && git checkout gh-pages && git rm -rf . && mv dist/* ./ ; git checkout master -- .gitignore && echo 'together.corylogan.com' >> dist/CNAME && git add . && git commit -am 'rev' && git push origin gh-pages  && git checkout master",
     "build": "node build/build.js"
   },
   "dependencies": {
