--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.3.0",
     "vue": "^2.5.2",
+    "vue-meta": "^1.6.0",
     "vue-router": "^3.0.1",
     "vue2-leaflet": "^2.0.2",
     "vuex": "^3.1.0"
@@ -61,6 +62,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prerender-spa-plugin": "^3.4.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
