--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "file-loader": "^1.1.4",
     "flat-map": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "fs-extra": "^7.0.1",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-imagemin": "^5.0.3",
@@ -64,9 +65,11 @@
     "postcss-url": "^7.2.1",
     "prerender-spa-plugin": "^3.4.0",
     "rimraf": "^2.6.0",
+    "robotstxt-webpack-plugin": "^5.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "showdown": "^1.9.0",
+    "sitemap": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
