--- a/.drone.yml
+++ b/.drone.yml
@@ -12,13 +12,14 @@ steps:
       password:
         from_secret: docker_password
 
-  - name: Deploy To Kontena Production
+  - name: Deploy To Kontena
     image: corylogan/kontena-cli
     envoronment:
       KONTENA_URL:
         from_secret: kontena_url
       KONTENA_TOKEN:
-        from_secret: kontena_api_key
+        from_secret: KONTENA_TOKEN
+      KONTENA_GRID: prod
 
     commands:
       - SSL_IGNORE_ERRORS=true kontena stack deploy together
