--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
 
   - name: Deploy Test
     image: kontena/cli
-    envoronment:
+    environment:
       KONTENA_URL:
         from_secret: kontena_url
       KONTENA_TOKEN:
@@ -14,8 +14,6 @@ steps:
       KONTENA_GRID: prod
       SSL_IGNORE_ERRORS: true
     commands:
-      - export SHITE='SHITE'
-      - echo "$SHITE"
       - echo "$KONTENA_URL"
       - kontena stack deploy together
   - name: docker
@@ -30,7 +28,7 @@ steps:
 
   - name: Deploy To Kontena
     image: kontena/cli
-    envoronment:
+    environment:
       KONTENA_URL:
         from_secret: kontena_url
       KONTENA_TOKEN:
