--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.3.0",
     "vue": "^2.5.2",
+    "vue-analytics": "^5.16.4",
     "vue-lazyload": "^1.2.6",
     "vue-meta": "^1.6.0",
     "vue-router": "^3.0.1",
