--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^1.30.1",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
+    "md5-file": "^4.0.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.3.0",
     "vue": "^2.5.2",
