--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "NODE_ENV=production yarn build && git checkout gh-pages && git rm -rf . && mv dist/* ./ ; git checkout master -- .gitignore && echo 'together.corylogan.com' >> dist/CNAME && git add . && git commit -am 'rev' && git push origin gh-pages  && git checkout master"
   },
   "dependencies": {
     "core-js": "^2.6.5",
