--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-url": "^8.0.0",
     "prerender-spa-plugin": "^3.4.0",
     "prettier": "^1.18.2",
+    "prettier-eslint": "^9.0.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
