--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "leaflet": "^1.4.0",
     "vue": "^2.6.10",
     "vue-analytics": "^5.16.4",
-    "vue-dplayer": "^0.0.10",
     "vue-lazyload": "^1.2.6",
     "vue-meta": "^2.2.2",
+    "vue-plyr": "^5.1.3",
     "vue-router": "^3.0.3",
     "vue2-leaflet": "^2.0.2",
     "vuex": "^3.1.0"
