--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-fetch": "^2.6.0",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
     "prerender-spa-plugin": "^3.4.0",
