--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "route-grabber": "node src/route-grabber.js",
     "deploy": "NODE_ENV=production yarn build && git checkout gh-pages && git rm -rf . && mv dist/* ./ ; git checkout master -- .gitignore && echo 'together.corylogan.com' >> CNAME && git add . && git commit -am 'rev' && git push origin gh-pages  && git checkout master"
   },
   "dependencies": {
