--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-plyr": "^5.1.3",
     "vue-router": "^3.0.3",
     "vue2-leaflet": "^2.0.2",
+    "vuejs-panorama": "^1.1.9",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
